================================================================================
 + Base: Use pretty URLs in redirectExit(). (Subs.php)
 + Base: Added the updateFilters() and filterAndHtaccessSettings() functions. (Subs-PrettyUrls.php, PrettyUrls-Filters.php)
 ! Base: Fixed a missing global in generatePrettyUrl(). (Subs-PrettyUrls.php)
 + Base: Filter board urls. (PrettyUrls-Filters.php)

Pretty URLs 0.5                                                    April 8, 2007
================================================================================
 ! Base: Fixed problems with board URLs containing quotes. (install.php, Subs-Board.php)
 + Base: Added the 'pretty_enable_filters' and 'pretty_filter_callbacks' settings. (install.php)
 + Base: Added the 'pretty_urls_cache' table. (install.php)
 + Base: Run the filter callbacks against all URLs in a page, caching any new urls. (QueryString.php)
 ! Base: Made some minor changes so that the above will work. (QueryString.php)
 ! Base: Don't cache URLs with a session. (QueryString.php)
 + Base: Added a file, PrettyUrls-Filters.php, to place the code of filter extensions in.
 % Started the actions-ext-none package, to rewrite miscellaneous action urls.
 ! actions: Clear the URL cache when (un)installing a new filter. (install.php)
 ! actions: Include an example.htaccess file too.
 ! Base: Remove unneeded ';' and '?' characters from URLs. (QueryString.php)

Pretty URLs 0.4                                                   March 14, 2007
================================================================================
 ! Base: Now following the SMF Coding Guidelines (I hope).
 ! Base: It wasn't compatible with another mod, my own! (Oh the shame!) (PackageGet.php)
 + Base: Transliterate some Cyrillic characters. (Subs-PrettyUrls.php)
 % Removed the TP-ext-none package, and moved its changes to the ext-none package.